first commit - Change Deploy.yaml ----CAT

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,7 @@ jobs:
         run: |
           ls -l ~/.ssh
           cat ~/.ssh/id_rsa
+          cat ~/.ssh/known_hosts
 
       - name: Conectando y desplegando el compose...
         run: |
