first commit - Change Deploy.yaml ----CAT

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,20 +12,23 @@ jobs:
       - name: Clonar repositorio
         uses: actions/checkout@v4
 
-      - name: Configurando y conectando al servidor de DigitalOcean...
+      - name: Instalar sshpass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
+
+      - name: Configurar SSH y conectar al servidor
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY_LJRG }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H -t rsa 67.207.84.219 >> ~/.ssh/known_hosts
 
-      - name: validar contenido de mi secret
+      - name: Validar contenido de mi secret
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY_LJRG }}"
         env:
           ACTIONS_STEP_DEBUG: true
 
-      - name: verificando contenido de ~/.ssh/id_rsa
+      - name: Verificar contenido de ~/.ssh/id_rsa
         run: |
           ls -l ~/.ssh
           cat ~/.ssh/id_rsa
@@ -33,7 +36,7 @@ jobs:
 
       - name: Conectando y desplegando el compose...
         run: |
-          ssh -i ~/.ssh/id_rsa root@67.207.84.219 << 'EOF'
+          sshpass -p "123123" ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 << 'EOF'
             set -e  # Terminar el script si algún comando falla
             mkdir -p /root/codigo/docker-scale-python-LJRG
             cd /root/codigo/docker-scale-python-LJRG
@@ -45,6 +48,55 @@ jobs:
             docker compose down || docker-compose down
             docker compose up -d --build || docker-compose up -d --build
           EOF
+
+
+# name: Workflow docker compose
+
+# on: 
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   deploy-compose:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Clonar repositorio
+#         uses: actions/checkout@v4
+
+#       - name: Configurando y conectando al servidor de DigitalOcean...
+#         run: |
+#           mkdir -p ~/.ssh
+#           echo "${{ secrets.SSH_PRIVATE_KEY_LJRG }}" > ~/.ssh/id_rsa
+#           chmod 600 ~/.ssh/id_rsa
+#           ssh-keyscan -H -t rsa 67.207.84.219 >> ~/.ssh/known_hosts
+
+#       - name: validar contenido de mi secret
+#         run: |
+#           echo "${{ secrets.SSH_PRIVATE_KEY_LJRG }}"
+#         env:
+#           ACTIONS_STEP_DEBUG: true
+
+#       - name: verificando contenido de ~/.ssh/id_rsa
+#         run: |
+#           ls -l ~/.ssh
+#           cat ~/.ssh/id_rsa
+#           cat ~/.ssh/known_hosts
+
+#       - name: Conectando y desplegando el compose...
+#         run: |
+#           ssh -i ~/.ssh/id_rsa root@67.207.84.219 << 'EOF'
+#             set -e  # Terminar el script si algún comando falla
+#             mkdir -p /root/codigo/docker-scale-python-LJRG
+#             cd /root/codigo/docker-scale-python-LJRG
+#             if [ ! -d ".git" ]; then
+#               git clone git@github.com:usuario/docker-scale-python-LJRG.git .
+#             fi
+#             git fetch origin main
+#             git reset --hard origin/main
+#             docker compose down || docker-compose down
+#             docker compose up -d --build || docker-compose up -d --build
+#           EOF
 
 # name: Workflow docker compose
 
