first commit - Change Deploy.yaml ----CAT

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,8 +12,8 @@ jobs:
       - name: Clonar repositorio
         uses: actions/checkout@v4
 
-      - name: Instalar sshpass
-        run: sudo apt-get update && sudo apt-get install -y sshpass
+      - name: Instalar `expect`
+        run: sudo apt-get update && sudo apt-get install -y expect
 
       - name: Configurar SSH y conectar al servidor
         run: |
@@ -22,15 +22,7 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H -t rsa 67.207.84.219 >> ~/.ssh/known_hosts
 
-      - name: Validar contenido de ~/.ssh
-        run: |
-          ls -l ~/.ssh
-          cat ~/.ssh/known_hosts
-
-      - name: Instalar expect
-        run: sudo apt-get update && sudo apt-get install -y expect
-
-      - name: Conectar al servidor con passphrase usando `expect`
+      - name: Probar conexión SSH con `expect`
         run: |
           expect <<EOF
           spawn ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 "echo Conexión exitosa!"
@@ -39,34 +31,117 @@ jobs:
           expect eof
           EOF
 
-      - name: Probar conexión SSH con `sshpass`
+      - name: Sincronizar archivos con el servidor usando `expect`
         run: |
-          sshpass -p "123123" ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 "echo Conexión exitosa!"
-
-      - name: Sincronizar archivos con el servidor
-        run: |
-          sshpass -p "123123" rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa" ./ root@67.207.84.219:/root/codigo/docker-scale-python-LJRG
-
-      - name: Conectar al servidor y desplegar con Docker Compose
-        run: |
-          sshpass -p "123123" ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 << 'EOF'
-            set -e
-            cd /root/codigo/docker-scale-python-LJRG
-            docker compose down || docker-compose down
-            docker compose pull
-            docker compose up --build --no-deps -d web || docker-compose up --build --no-deps -d web
-            docker system prune -f
-            echo "🚀 Despliegue completado con éxito!"
+          expect <<EOF
+          spawn rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa" ./ root@67.207.84.219:/root/codigo/docker-scale-python-LJRG
+          expect "Enter passphrase for key"
+          send "123123\r"
+          expect eof
           EOF
 
-      - name: Verificar estado de los contenedores
-        run: sshpass -p "123123" ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 "docker ps --format 'table {{.Names}}\t{{.Status}}'"
+      - name: Conectar al servidor y desplegar con Docker Compose usando `expect`
+        run: |
+          expect <<EOF
+          spawn ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219
+          expect "Enter passphrase for key"
+          send "123123\r"
+          expect "#"
+          send "cd /root/codigo/docker-scale-python-LJRG\r"
+          send "docker compose down || docker-compose down\r"
+          send "docker compose pull\r"
+          send "docker compose up -d --build || docker-compose up -d --build\r"
+          send "docker system prune -f\r"
+          send "exit\r"
+          expect eof
+          EOF
+
+      - name: Verificar estado de los contenedores usando `expect`
+        run: |
+          expect <<EOF
+          spawn ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 "docker ps --format 'table {{.Names}}\t{{.Status}}'"
+          expect "Enter passphrase for key"
+          send "123123\r"
+          expect eof
+          EOF
 
       - name: Notificar en Slack
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: "🚀 Despliegue exitoso en Digital Ocean!"
+          SLACK_MESSAGE: "🚀 Despliegue exitoso en DigitalOcean completado!"
+
+
+
+# name: Workflow docker compose
+
+# on: 
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   deploy-compose:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Clonar repositorio
+#         uses: actions/checkout@v4
+
+#       - name: Instalar sshpass
+#         run: sudo apt-get update && sudo apt-get install -y sshpass
+
+#       - name: Configurar SSH y conectar al servidor
+#         run: |
+#           mkdir -p ~/.ssh
+#           echo "${{ secrets.SSH_PRIVATE_KEY_LJRG }}" > ~/.ssh/id_rsa
+#           chmod 600 ~/.ssh/id_rsa
+#           ssh-keyscan -H -t rsa 67.207.84.219 >> ~/.ssh/known_hosts
+
+#       - name: Validar contenido de ~/.ssh
+#         run: |
+#           ls -l ~/.ssh
+#           cat ~/.ssh/known_hosts
+
+#       - name: Instalar expect
+#         run: sudo apt-get update && sudo apt-get install -y expect
+
+#       - name: Conectar al servidor con passphrase usando `expect`
+#         run: |
+#           expect <<EOF
+#           spawn ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 "echo Conexión exitosa!"
+#           expect "Enter passphrase for key"
+#           send "123123\r"
+#           expect eof
+#           EOF
+
+#       - name: Probar conexión SSH con `sshpass`
+#         run: |
+#           sshpass -p "123123" ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 "echo Conexión exitosa!"
+
+#       - name: Sincronizar archivos con el servidor
+#         run: |
+#           sshpass -p "123123" rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa" ./ root@67.207.84.219:/root/codigo/docker-scale-python-LJRG
+
+#       - name: Conectar al servidor y desplegar con Docker Compose
+#         run: |
+#           sshpass -p "123123" ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 << 'EOF'
+#             set -e
+#             cd /root/codigo/docker-scale-python-LJRG
+#             docker compose down || docker-compose down
+#             docker compose pull
+#             docker compose up --build --no-deps -d web || docker-compose up --build --no-deps -d web
+#             docker system prune -f
+#             echo "🚀 Despliegue completado con éxito!"
+#           EOF
+
+#       - name: Verificar estado de los contenedores
+#         run: sshpass -p "123123" ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@67.207.84.219 "docker ps --format 'table {{.Names}}\t{{.Status}}'"
+
+#       - name: Notificar en Slack
+#         uses: rtCamp/action-slack-notify@v2
+#         env:
+#           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+#           SLACK_MESSAGE: "🚀 Despliegue exitoso en Digital Ocean!"
 
 
 # name: Workflow docker compose
